attempt to fix word break wrapping on maker cards.

--- a/sass/custom-styles.scss
+++ b/sass/custom-styles.scss
@@ -893,7 +893,7 @@ section.member-menu {
           // font-size: 12px;
           text-align: center; 
           line-height: 13px;
-          display: block;
+          display: flex;
           font-size: 10px;
           text-transform: uppercase;
           font-weight: bold;
